<resources>

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Miwok</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_for_signup">Click For SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">todo</string>
</resources>