<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context="LoginActivity">



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:layout_marginLeft="30dp"
      android:layout_marginRight="30dp"
      android:gravity="center_horizontal"
      android:orientation="vertical">




    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/email"
        android:padding="9dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        android:hint="@string/password"
        android:padding="9dp" />

    <TextView
        android:id="@+id/tvClickSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="15dp"
        android:padding="3dp"
        android:text="@string/click_for_signup"

        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00A884"
        android:padding="15dp"
        android:text="@string/sign_in"
        app:cornerRadius="4dp" />




</LinearLayout>
</LinearLayout>